<resources>
    <string name="app_name">Sanus</string>

    <string name="title_buscar">Buscar</string>
    <string name="title_citas">Citas</string>
    <string name="title_chat">Chat</string>
    <string name="title_foro">Foro</string>
    <string name="title_ajustes">Ajustes</string>

    <string name="serch_speciality">Busca por especialidad</string>
    <string name="my_history_quotes">Mi historial de citas</string>

    <string name="bienvenido">Bienvenido</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repetir_contrasenia">Repetir contraseña</string>
    <string name="password_corta">Contraseña corta</string>
    <string name="autenticacion_fallida">Correo y contraseña no validos</string>
    <string name="show_password">Mostrar</string>
    <string name="hide_password">Ocultar</string>

    <string name="button_accept">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_exit">Salir</string>
    <string name="button_continue">Continuar</string>
    <string name="button_save">Guardar</string>
    <string name="gender_male">Masculino</string>
    <string name="gender_female">Femenino</string>

    <string name="age_select">Selecciona una edad</string>
    <string name="required_data">* Los datos son obligatorios.</string>
    <string name="required_name">Nombre(s)* :</string>
    <string name="required_last_name">Apellido(s)*:</string>


    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Crear cuenta</string>
    <string name="error_invalid_email">El correo electrónico es inválido</string>
    <string name="error_invalid_password">Contraseña corta</string>
    <string name="error_incorrect_password">Error en la contraseña</string>
    <string name="action_crea_cuenta">Crear cuenta</string>
    <string name="signin_sucess">Registro exitoso</string>
    <string name="signin_error">Error al guardar</string>
    <string name="photo_error">Error al subir imagen</string>

    <string name="empty_email">Ingresa un correo</string>
    <string name="empty_password">Ingresa una contraseña</string>
    <string name="empty_email_password">Ingresa correo y contraseña</string>
    <string name="length_password">Se necesitan mínimo 6 caracteres</string>
    <string name="authenticate_failed">Autenticacion fallida</string>
    <string name="logout_msg">¿Cerrar sesión?</string>
    <string name="logout_text">Cerrar sesión</string>
    <string name="complete_register">Para completar el registro necesitamos algunos datos.</string>

    <string name="uploading">Subiendo</string>
    <string name="upload_complete">Completo</string>
    <string name="error">Error</string>


    <string name="action_facebook">Facebook</string>
    <string name="action_google">Google</string>


    <string name="label_medical_center">Seleccione un centro médico</string>
    <string name="label_date">Seleccione una fecha</string>
    <string name="label_time_schedule">Seleccione una jornada laboral</string>
    <string name="message_appointment_succesfully_saved">La cita se asignó correctamente</string>
    <string name="action_save_appointment">Guardar</string>
    <string name="error_empty_doctor">Seleccione el turno de algún doctor disponible</string>
    <string-array name="entries_time_schedule">
        <item>Mañana</item>
        <item>Tarde</item>
    </string-array>
    <string name="title_activity_doctors_schedules">Elige Tu Doctor</string>
    <string name="message_no_schedules">No se encontraron horarios disponibles</string>
    <string name="label_availability">Disponibilidad</string>
    <string name="request_button">Solicitar</string>
    <string name="message_no_doctor_schedule_picked">Reserva un doctor para tu cita</string>
    <string name="action_select_doctor">Buscar doctor</string>
    <string name="publish_comment">Add a comment here</string>
    <string name="agenda_tu_cita">Agenda tu cita</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="title_activity_scrolling_prueba">ScrollingActivityPrueba</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_hospital">Selecciona una clinica</string>
    <string name="select_doctor">Seleccionar doctor</string>
    <string name="select_day_cite">Seleccionar dia de cita</string>
    <string name="select_hour">Seleccionar hora</string>
    <string name="resumen_de_cita">Resumen de cita</string>
    <string name="btn_skip">btn_skip</string>
    <string name="btn_next">btn_next</string>
    <string name="img_cancel">imgCancel</string>
    <string name="img_save">imgSave</string>
    <string name="nameDoct">Nombre doctor</string>
    <string name="especialidad">Especialidad</string>
    <string name="nombre_clinica">Nombre clinica</string>
    <string name="direccion_clinica">Direccion clinica</string>
    <string name="fecha_de_cita">fecha de cita</string>
    <string name="dia_de_cita">Dia de cita</string>
    <string name="hora_de_cita">Hora de cita</string>
    <string name="hora">Hora</string>
    <string name="enviar">enviar</string>
    <string name="no_coments">no coments</string>
    <string name="title_comments">Comentarios</string>
    <string name="fecha">Fecha</string>
    <string name="usuario">Usuario</string>
    <string name="direccion_de_hospital">Direccion de hospital</string>
    <string name="hospital">Hospital</string>
    <string name="closecita">closeCita</string>
    <string name="savecita">saveCita</string>
    <string name="search_hospital">Busca hospital</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cedula">Cedula</string>
    <string name="cv">CV</string>


</resources>
