<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_busqueda"
        android:icon="@drawable/icons_busqueda"
        android:title="@string/title_buscar" />

    <item
        android:id="@+id/navigation_citas"
        android:icon="@drawable/icons_calendario"
        android:title="@string/title_citas" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icons_comunicacion"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_foro"
        android:icon="@drawable/icons_comentar"
        android:title="@string/title_foro" />
    <item
        android:id="@+id/navigation_ajustes"
        android:icon="@drawable/icons_ajustes"
        android:title="@string/title_ajustes" />
</menu>