<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_customer"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/creacuenta"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/edCorreo"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnround"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edContraseña"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnround"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnInicio"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnazul"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCrearCuenta"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnaranja"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/colorPrimary" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGoogle"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/btnrojo"
                    android:text="@string/action_google"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnFacebook"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/btnazulfacebook"
                    android:text="@string/action_facebook"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
