<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgHeader"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/hcitas"
                android:contentDescription="@string/title_chat"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:background="@drawable/btnround"
            android:gravity="center"
            android:text="@string/resumen_de_cita"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <!--clinica-->
    <LinearLayout
        android:id="@+id/resume_clinica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnround"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="140dp"
        android:weightSum="10"
        android:baselineAligned="false"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/clinic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_hospital" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="8"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nombreClinica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_clinica" />

            <TextView
                android:id="@+id/direccionClinica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/direccion_clinica" />
        </LinearLayout>

    </LinearLayout>
    <!--doctor-->
    <LinearLayout
    android:id="@+id/resume_doctor"
    android:layout_below="@+id/resume_clinica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btnround"
    android:orientation="horizontal"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:weightSum="10"
    android:baselineAligned="false"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nombre1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameDoct" />

        <TextView
            android:id="@+id/especialidad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/especialidad" />
    </LinearLayout>

</LinearLayout>
    <!--day-->
    <LinearLayout
        android:id="@+id/resume_day"
        android:layout_below="@+id/resume_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnround"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:weightSum="10"
        android:baselineAligned="false"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_cite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="8"
            android:orientation="vertical">


            <TextView
                android:id="@+id/fechaCite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_cita" />

            <TextView
                android:id="@+id/dateCite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dia_de_cita" />
        </LinearLayout>

    </LinearLayout>
    <!--hour-->
    <LinearLayout
        android:id="@+id/resume_hour"
        android:layout_below="@+id/resume_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnround"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:weightSum="10"
        android:baselineAligned="false"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/clock"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_hours" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="8"
            android:orientation="vertical">


            <TextView
                android:id="@+id/hourCite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora" />

            <TextView
                android:id="@+id/horaCite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hora_de_cita" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/closeCita"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="43dp"
            app:srcCompat="@mipmap/ic_close"
            android:contentDescription="@string/closecita" />
        <ImageView
            android:id="@+id/saveCita"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="44dp"
            app:srcCompat="@mipmap/ic_save_cite"
            android:contentDescription="@string/savecita"/>
    </RelativeLayout>

</RelativeLayout>
