<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lyHeader"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/hcitas"
                android:contentDescription="@string/title_chat"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/btnround"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/select_doctor" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_top_new_cita"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_skip"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="43dp"
                app:srcCompat="@drawable/ic_skip"
                android:contentDescription="@string/btn_skip" />
            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="44dp"
                app:srcCompat="@drawable/ic_next"
                android:contentDescription="@string/btn_next"/>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>

